--- a/js/nodejs/samples/class_1/views/users/list.ejs
+++ b/js/nodejs/samples/class_1/views/users/list.ejs
@@ -7,7 +7,7 @@
             </tr>
             <tr>
                 <td>1</td>
-                <td>livro de node js</td>
+                <td>João Francisco</td>
             </tr>
         </table>
     </body>
