[feature] exemplo de rota

--- a/js/nodejs/samples/class_2/app/views/users/list.ejs
+++ b/js/nodejs/samples/class_2/app/views/users/list.ejs
@@ -1,4 +1,9 @@
-<html>
+<h1>Usuários</h1>
+<ul>
+    <li>1 - João Francisco</li>
+</ul>
+
+<!-- <html>
     <body>
         <table border="1px">
             <tr>
@@ -11,4 +16,4 @@
             </tr>
         </table>
     </body>
-</html>
+</html> -->
