[django] views e static

--- a/django/sample_env/sample_project/core/templates/pages/list_pages.html
+++ b/django/sample_env/sample_project/core/templates/pages/list_pages.html
@@ -1,7 +1,21 @@
-<h1>Listagem de páginas</h1>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Exemplo</title>
+    <link href="{% static 'css/app.css' %}"rel="stylesheet" type="text/css">
+</head>
+<body>
 
-<ul>
-    <li>ads asd fads f</li>
-    <li>kjhlk lkjh lkjh </li>
-    <li>oiuy oiu yoiuy </li>
-</ul>
+
+    <h1>Listagem de páginas</h1>
+    <ul>
+        <li>ads asd fads f</li>
+        <li>kjhlk lkjh lkjh </li>
+        <li>oiuy oiu yoiuy </li>
+    </ul>
+
+
+</body>
+</html>
